rhai/codegen/ui_tests/rhai_fn_getter_return.stderr
error: property getter must return a value
  --> $DIR/rhai_fn_getter_return.rs:13:9
   |
13 |     pub fn test_fn(input: &mut Point) {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_getter_return.rs:23:5
   |
23 |     test_module::test_fn(&mut n);
   |     ^^^^^^^^^^^ use of undeclared crate or module `test_module`
